Fix movie details tags visibility issue. Change movie list mobile grid from "1 movie per row" to "2 movies per row" (reduce "list-card-width--sm" variable value from "300px" to "130px").

--- a/src/app/components/pages/movies-page/ListBlock/CardBlock/CardImageBlock/CardImageBlock.scss
+++ b/src/app/components/pages/movies-page/ListBlock/CardBlock/CardImageBlock/CardImageBlock.scss
@@ -3,7 +3,7 @@
 $base: 'list-card';
 
 $image-height: 300px;
-$image-height--sm: 400px;
+$image-height--sm: 195px;
 
 @mixin card-image {
   width: 100%;
