--- a/src/app/components/pages/movies-page/ListBlock/ListBlock.scss
+++ b/src/app/components/pages/movies-page/ListBlock/ListBlock.scss
@@ -7,6 +7,6 @@
   margin-top: 20px;
 
   @media screen and (max-width: 576px) {
-    grid-template-columns: repeat(auto-fill, 100%);
+    grid-template-columns: repeat(auto-fill, $list-card-width--sm + 12);
   }
 }
