--- a/src/assets/css/theme/variables.scss
+++ b/src/assets/css/theme/variables.scss
@@ -1,2 +1,2 @@
 $list-card-width: 200px;
-$list-card-width--sm: 300px;
+$list-card-width--sm: 130px;
